k8s/memo-app/overlays/dev/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo-frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo-worker
spec:
  template:
    spec:
      containers:
      - name: memo-worker
