k8s/memo-app/overlays/dev/image-pull-policy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo-frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo-worker
spec:
  template:
    spec:
      containers:
      - name: worker
        imagePullPolicy: Always
